messagebox text wrap correction

--- a/src/app/shared/components/message-box/message-box.component.scss
+++ b/src/app/shared/components/message-box/message-box.component.scss
@@ -49,4 +49,5 @@
 .app-message-box-content p {
   margin: 0px;
   color: inherit;
+  white-space: pre-wrap;
 }
